--- a/web/accounting/templates/accounting/accounting_table_search.html
+++ b/web/accounting/templates/accounting/accounting_table_search.html
@@ -1,29 +1,29 @@
 <td class="search">
   <small>
-  <input class="form-control form-control-sm search" data-field="id" placeholder=""></input>
+  <input class="form-control form-control-sm search" data-field="id" placeholder="">
   </small>
 </td>
 <td class="search">
-  <input class="form-control form-control-sm search" data-field="solicitante" placeholder=""></input>
+  <input class="form-control form-control-sm search" data-field="solicitante" placeholder="">
 </td>
 <td class="search">
-  <input class="form-control form-control-sm search" data-field="tasacionCodigo" placeholder=""></input>
+  <input class="form-control form-control-sm search" data-field="tasacionCodigo" placeholder="">
 </td>
 <td class="search">
-  <input class="form-control form-control-sm search" data-field="tipoTasacion" placeholder=""></input>
+  <input class="form-control form-control-sm search" data-field="tipoTasacion" placeholder="">
 </td>
 <td class="search">
-  <input class="form-control form-control-sm search" data-field="tasadorUser" placeholder=""></input>
+  <input class="form-control form-control-sm search" data-field="tasadorUser" placeholder="">
 </td>
 <td class="search">
-  <input class="form-control form-control-sm search" data-field="valorTasacion" placeholder=""></input>
+  <input class="form-control form-control-sm search" data-field="valorTasacion" placeholder="">
 </td>
 <td class="search">
-  <input class="form-control form-control-sm search" data-field="valorUfTasacion" placeholder=""></input>
+  <input class="form-control form-control-sm search" data-field="valorUfTasacion" placeholder="">
 </td>
 <td class="search">
-  <input class="form-control form-control-sm search" data-field="evaluacion" placeholder=""></input>
+  <input class="form-control form-control-sm search" data-field="evaluacion" placeholder="">
 </td>
 <td class="search">
-  <input class="form-control form-control-sm search" data-field="gastos" placeholder=""></input>
+  <input class="form-control form-control-sm search" data-field="gastos" placeholder="">
 </td>
