--- a/web/appraisal/templates/appraisal/modals.html
+++ b/web/appraisal/templates/appraisal/modals.html
@@ -1,39 +1,38 @@
-<div class="modal fade" id="modal_assign_tasador" tabindex="-2" role="dialog" aria-hidden="true">
-  {% include 'list/modals_assign_tasador.html' %}
+<div class="modal fade" id="modal_assign_tasador" tabindex="-2">
+  {% include 'list/modal_assign_tasador.html' %}
 </div>
 
-<div class="modal fade" id="modal_assign_visador" tabindex="-2" role="dialog" aria-hidden="true">
-  {% include 'list/modals_assign_visador.html' %}
+<div class="modal fade" id="modal_assign_visador" tabindex="-2">
+  {% include 'list/modal_assign_visador.html' %}
 </div>
 
-<div class="modal fade" id="modal_edit_address" tabindex="-1" role="dialog" aria-hidden="true">
+<div class="modal fade" id="modal_edit_address" tabindex="-1">
   {% include 'appraisal/modals_edit_address.html' %}
 </div>
 
-<div class="modal fade" id="modal_add_address" tabindex="-1" role="dialog" aria-hidden="true">
-  {% include 'appraisal/modals_add_address.html' %}
+<div class="modal fade" id="modal_add_address" tabindex="-1">
 </div>
 
-<div class="modal fade" id="modal_remove_address" tabindex="-1" role="dialog" aria-hidden="true">
+<div class="modal fade" id="modal_remove_address" tabindex="-1">
   {% include 'appraisal/modals_remove_address.html' %}
 </div>
 
-<div class="modal fade" id="modal_add_property" tabindex="-1" role="dialog" aria-hidden="true">
+<div class="modal fade" id="modal_add_property" tabindex="-1">
 </div>
 
-<div class="modal fade" id="modal_edit_property" tabindex="-1" role="dialog" aria-hidden="true">
+<div class="modal fade" id="modal_edit_property" tabindex="-1">
   {% include 'appraisal/modals_edit_property.html' %}
 </div>
 
-<div class="modal fade" id="modal_add_apartment" tabindex="-1" role="dialog" aria-hidden="true">
+<div class="modal fade" id="modal_add_apartment" tabindex="-1">
   {% include 'appraisal/modals_add_apartment.html' %}
 </div>
 
-<div class="modal fade" id="modal_add_rol" tabindex="-1" role="dialog" aria-hidden="true">
+<div class="modal fade" id="modal_add_rol" tabindex="-1">
   {% include 'appraisal/modals_add_rol.html' %}
 </div>
 
-<div class="modal fade" id="modalExport" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="modalExport" tabindex="-1">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -115,11 +114,11 @@
 </div>
 
 <div class="modal fade" id="modal_assign_tasador" tabindex="-2" role="dialog" aria-hidden="true">
-  {% include 'list/modals_assign_tasador.html' %}
+  {% include 'list/modal_assign_tasador.html' %}
 </div>
 
 <div class="modal fade" id="modal_assign_visador" tabindex="-2" role="dialog" aria-hidden="true">
-  {% include 'list/modals_assign_visador.html' %}
+  {% include 'list/modal_assign_visador.html' %}
 </div>
 
 <div class="modal fade" id="modal_add_property_similar" tabindex="-2" role="dialog" aria-hidden="true">
