--- a/web/appraisal/templates/appraisal/value_assets.html
+++ b/web/appraisal/templates/appraisal/value_assets.html
@@ -423,19 +423,19 @@
           <td></td>
           <td style="font-weight:bold;text-align:right;padding-right:1em;font-size:0.85em;">Valor tasador</td>
           <td>
-            <input class="gtotal area form-control form-control-sm constructions" name="area" style="text-align:right;" disabled></input>
+            <input class="gtotal area form-control form-control-sm constructions" name="area" style="text-align:right;" disabled>
           </td>
           <td>
-            <input class="gtotal value_1 form-control form-control-sm constructions" name="value_1" style="text-align:right;" disabled></input>
+            <input class="gtotal value_1 form-control form-control-sm constructions" name="value_1" style="text-align:right;" disabled>
           </td>
           <td>
-            <input class="gtotal value_2 form-control form-control-sm constructions" name="value_2" style="text-align:right;" disabled></input>
+            <input class="gtotal value_2 form-control form-control-sm constructions" name="value_2" style="text-align:right;" disabled>
           </td>
           <td>
-            <input class="gtotal density_1 form-control form-control-sm constructions" name="density_1" style="text-align:right;" disabled></input>
+            <input class="gtotal density_1 form-control form-control-sm constructions" name="density_1" style="text-align:right;" disabled>
           </td>
           <td>
-            <input class="gtotal density_2 form-control form-control-sm constructions" name="density_2" style="text-align:right;" disabled></input>
+            <input class="gtotal density_2 form-control form-control-sm constructions" name="density_2" style="text-align:right;" disabled>
           </td>
           <td></td>
         </tr>
@@ -443,19 +443,19 @@
           <td></td>
           <td style="font-weight:bold;text-align:right;padding-right:1em;font-size:0.85em;">Valor seguro</td>
           <td>
-            <input class="gtotal area form-control form-control-sm constructions" name="area" style="text-align:right;" disabled></input>
+            <input class="gtotal area form-control form-control-sm constructions" name="area" style="text-align:right;" disabled>
           </td>
           <td>
-            <input class="gtotal value_1 form-control form-control-sm constructions" name="value_1" style="text-align:right;" disabled></input>
+            <input class="gtotal value_1 form-control form-control-sm constructions" name="value_1" style="text-align:right;" disabled>
           </td>
           <td>
-            <input class="gtotal value_2 form-control form-control-sm constructions" name="value_2" style="text-align:right;" disabled></input>
+            <input class="gtotal value_2 form-control form-control-sm constructions" name="value_2" style="text-align:right;" disabled>
           </td>
           <td>
-            <input class="gtotal density_1 form-control form-control-sm constructions" name="density_1" style="text-align:right;" disabled></input>
+            <input class="gtotal density_1 form-control form-control-sm constructions" name="density_1" style="text-align:right;" disabled>
           </td>
           <td>
-            <input class="gtotal density_2 form-control form-control-sm constructions" name="density_2" style="text-align:right;" disabled></input>
+            <input class="gtotal density_2 form-control form-control-sm constructions" name="density_2" style="text-align:right;" disabled>
           </td>
           <td></td>
         </tr>
