--- a/web/archive/templates/archive/appraisals_search_tr.html
+++ b/web/archive/templates/archive/appraisals_search_tr.html
@@ -54,7 +54,7 @@
 {% endif %}
 </td>
 <td style="text-align:right;">
-  {% with table="not_assigned" %}
+  {% with table="archive" %}
     {% include 'list/btn_logbook.html' %}
   {% endwith %}
   {% if appraisal.state == appraisal.STATE_ARCHIVED %}
