--- a/web/archive/templates/archive/modals.html
+++ b/web/archive/templates/archive/modals.html
@@ -1,6 +1,8 @@
-<div class="modal fade" id="modal_unarchive" tabindex="-1" role="dialog" aria-hidden="true">
+<div class="modal fade" id="modal_unarchive" tabindex="1" role="dialog" aria-hidden="true">
   {% include 'archive/modals_unarchive.html' %}
 </div>
-<div class="modal fade" id="modal_delete" tabindex="-1" role="dialog" aria-hidden="true">
+<div class="modal fade" id="modal_delete" tabindex="2" role="dialog" aria-hidden="true">
   {% include 'archive/modals_delete.html' %}
+</div>
+<div class="modal fade" id="modal_logbook" tabindex="3" role="dialog" aria-hidden="true">
 </div>
