--- a/web/list/templates/list/appraisals_table_not_assigned_tr.html
+++ b/web/list/templates/list/appraisals_table_not_assigned_tr.html
@@ -22,7 +22,7 @@
 </td>
 <td>
   {% with button="add" %}
-    {% include 'list/td_tasador_name.html' %}
+    {% include 'list/td_visador_name.html' %}
   {% endwith %}
 </td>
 {% include 'list/appraisals_table_td_date_created.html' %}
