--- a/web/list/templates/list/appraisals_table_search.html
+++ b/web/list/templates/list/appraisals_table_search.html
@@ -1,36 +1,36 @@
 <td class="search">
-  <input class="form-control form-control-sm search" data-field="id" placeholder=""></input>
+  <input class="form-control form-control-sm search" data-field="id" placeholder="">
 </td>
 <td class="search">
-  <input class="form-control form-control-sm search" data-field="solicitante" placeholder=""></input>
+  <input class="form-control form-control-sm search" data-field="solicitante" placeholder="">
 </td>
 <td class="search">
-  <input class="form-control form-control-sm search" data-field="solicitanteCodigo" placeholder=""></input>
+  <input class="form-control form-control-sm search" data-field="solicitanteCodigo" placeholder="">
 </td>
 <td class="search">
-  <input class="form-control form-control-sm search" data-field="propertyType" placeholder=""></input>
+  <input class="form-control form-control-sm search" data-field="propertyType" placeholder="">
 </td>
 <td class="search">
-  <input class="form-control form-control-sm search" data-field="address" placeholder=""></input>
+  <input class="form-control form-control-sm search" data-field="address" placeholder="">
 </td>
 <td class="search">
-  <input class="form-control form-control-sm search" data-field="tasadorUser" placeholder=""></input>
+  <input class="form-control form-control-sm search" data-field="tasadorUser" placeholder="">
 </td>
 {% if state != 4 %}
 <td class="search">
-  <input class="form-control form-control-sm search" data-field="visadorUser" placeholder=""></input>
+  <input class="form-control form-control-sm search" data-field="visadorUser" placeholder="">
 </td>
 {% endif %}
 {% if state != 4 %}
 <td class="search">	
-	<input class="form-control form-control-sm search" data-field="dateCreated" placeholder=""></input>
+	<input class="form-control form-control-sm search" data-field="dateCreated" placeholder="">
 </td>
 {% endif %}
 <td class="search">
 	{% if state != 4 %}
-	<input class="form-control form-control-sm search" data-field="dateDue" placeholder=""></input>
+	<input class="form-control form-control-sm search" data-field="dateDue" placeholder="">
 	{% else %}
-	<input class="form-control form-control-sm search" data-field="dateFinished" placeholder=""></input>
+	<input class="form-control form-control-sm search" data-field="dateFinished" placeholder="">
 	{% endif %}
 </td>
 <td>
