--- a/web/list/templates/list/header.html
+++ b/web/list/templates/list/header.html
@@ -27,9 +27,11 @@
       </li>
       -->
       {% endif %}
+      {% if perms.user.view_accounting %}
       <li class="nav-item">
         <a class="nav-link" href="/accounting/">Contabilidad</a>
       </li>
+      {% endif %}
       <li class="nav-item">
         <a class="nav-link" href="/archive/">Archivo</a>
       </li>
