--- a/web/list/templates/list/appraisals_table_returned_tr.html
+++ b/web/list/templates/list/appraisals_table_returned_tr.html
@@ -32,7 +32,7 @@
 {% endif %}
 </td>
 <td style="text-align:right;">
-  {% with table="active" %}
+  {% with table="returned" %}
     {% include 'list/btn_logbook.html' %}
   {% endwith %}
 </td>
