--- a/web/list/templates/list/modal_assign_visador.html
+++ b/web/list/templates/list/modal_assign_visador.html
@@ -1,9 +1,9 @@
-<div class="modal-dialog modal-lg" role="document">
+<div class="modal-dialog modal-lg">
   <div class="modal-content">
     <div class="modal-header">
-      <h5 class="modal-title" id="exampleModalLabel">Seleccione un visador</h5>
-      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
+      <h5 class="modal-title">Seleccione un visador</h5>
+      <button type="button" class="close" data-dismiss="modal">
+        <span>&times;</span>
       </button>
     </div>
     <div class="modal-body">
@@ -14,7 +14,11 @@
           Cargando visadores
           <div class="ld ld-ring ld-spin" style="font-size:1.0em;"></div>
         </div>
-        <input class="form-control mb-2" placeholder="Buscar visador" id="visador_buscar" style="display:none;"></input>
+
+        <!--
+        <input class="form-control mb-2" placeholder="Buscar visador" id="input_visador_buscar" style="display:none;">
+        -->
+
         <table class="table table-sm table-borderless" id="table" style="display:none;">
           <thead>
             <tr>
@@ -44,9 +48,11 @@
             {% endfor %}
           </tbody>
         </table>
+
         <div class="alert alert-warning text-center" id="alert_already_chosen" style="display:none;">
           Visador seleccionado es el actual visador
         </div>
+
         <div class="modal-footer">
           <input id="modal_assign_visador_appraisal_id" name="appraisal_id" type="hidden" value="">
           <input id="modal_assign_visador_appraisal_visador_id" name="appraisal_visador_id" type="hidden" value="{{appraisal.visadorUser.id}}">
@@ -69,6 +75,7 @@
 </div>
 
 <script>
+  /*
   var search = function(val) {
     val = val.toLowerCase()
     $("tr.visador").each(function() {
@@ -85,12 +92,13 @@
       }
     });
   }
-  $("#visador_buscar").on('keyup',function() {
+  $("#input_visador_buscar").on('keyup',function() {
     val = $(this).val()
     search(val)
   })
-  $("#visador_buscar").on('change',function() {
+  $("#input_visador_buscar").on('change',function() {
     val = $(this).val()
     search(val)
   })
+  */
 </script>
