--- a/web/list/templates/list/modals.html
+++ b/web/list/templates/list/modals.html
@@ -1,85 +1,42 @@
-<div class="modal fade" id="modal_assign_tasador" tabindex="-2" role="dialog" aria-hidden="true">
-  {% include 'list/modals_assign_tasador.html' %}
+<div class="modal" id="modal_logbook" tabindex="-1">
+  <!-- We don't include it to save loading time -->
 </div>
 
-<div class="modal fade" id="modal_assign_visador" tabindex="-2" role="dialog" aria-hidden="true">
-  {% include 'list/modals_assign_visador.html' %}
+<div class="modal" id="modal_assign_tasador" tabindex="-1">
+  {% include 'list/modal_assign_tasador.html' %}
 </div>
 
-<div class="modal fade" id="modal_archive" tabindex="-1" role="dialog" aria-hidden="true">
-  {% include 'list/modals_archive.html' %}
+<div class="modal" id="modal_assign_visador" tabindex="-1">
+  {% include 'list/modal_assign_visador.html' %}
 </div>
 
-<div class="modal fade" id="modal_evaluate" tabindex="-2" role="dialog" aria-labelledby="label" aria-hidden="true">
-  {% include 'list/modals_evaluate.html' %}
+<div class="modal" id="modal_archive" tabindex="-1">
+  {% include 'list/modal_archive.html' %}
 </div>
 
-
-<div class="modal fade" id="modal_unassign_tasador" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title">Desasignar tasador</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-          <p>¿Esta seguro de que desea desasignar el tasador?</p>
-          <p>Un nuevo tasador deberá confirmar la asignación.</p>
-      </div>
-      <div class="modal-footer">
-        <form action="" method="post" id="form">
-          {% csrf_token %}
-          <input id="modal_unassign_tasador_appraisal_id" name="appraisal_id" type="hidden" value="2">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-          <button type="button" class="btn btn-primary ld-ext-right" name="btn_unassign_tasador" id="btn_unassign_tasador" value="">
-            Desasignar
-            <div class="ld ld-ring ld-spin"></div>
-          </button>
-        </form>
-      </div>
-    </div>
-  </div>
+<div class="modal" id="modal_evaluate" tabindex="-1">
+  {% include 'list/modal_evaluate.html' %}
 </div>
 
-
-<div class="modal fade" id="modal_unassign_visador" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title">Desasignar visador</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-          <p>¿Esta seguro de que desea desasignar el visador?</p>
-          <p>Un nuevo visador deberá confirmar la asignación.</p>
-      </div>
-      <div class="modal-footer">
-        <form action="" method="post" id="form">
-          {% csrf_token %}
-          <input id="modal_unassign_visador_appraisal_id" name="appraisal_id" type="hidden" value="2">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-          <button type="button" class="btn btn-primary" name="btn_unassign_visador" id="btn_unassign_visador" value="">Desasignar</button>
-        </form>
-      </div>
-    </div>
-  </div>
+<div class="modal" id="modal_unassign_tasador" tabindex="-1">
+  {% include 'list/modal_unassign_tasador.html' %}
 </div>
 
-<div class="modal fade" id="logbook" tabindex="-2" role="dialog" aria-labelledby="label" aria-hidden="true">
-  <div class="modal-dialog modal-lg" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Bitácora</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body" id="logbook_body">
-      </div>
-    </div>
-  </div>
+<div class="modal" id="modal_unassign_visador" tabindex="-1">
+  {% include 'list/modal_unassign_visador.html' %}
 </div>
+
+<script>
+  $('#modal_assign_visador').on('show.bs.modal', function (e) {
+    console.log("show.bs.modal")
+  })
+  $('#modal_assign_visador').on('shown.bs.modal', function (e) {
+    console.log("shown.bs.modal")
+  })
+  $('#modal_assign_visador').on('hide.bs.modal', function (e) {
+    console.log("hide.bs.modal")
+  })
+  $('#modal_assign_visador').on('hidden.bs.modal', function (e) {
+    console.log("hidden.bs.modal")
+  })
+</script>
