--- a/web/list/templates/list/appraisals.html
+++ b/web/list/templates/list/appraisals.html
@@ -21,8 +21,8 @@
   ajax_mark_as_returned_url = "{% url 'ajax_mark_as_returned_url' %}"
   ajax_get_appraisal_row_url = "{% url 'ajax_get_appraisal_row_url' %}"
   ajax_logbook_close_url = "{% url 'ajax_logbook_close_url' %}"
-  ajax_appraisal_expenses = "{% url 'ajax_appraisal_expenses_url' %}"
-  ajax_save_expenses = "{% url 'ajax_save_expenses_url' %}"
+  ajax_appraisal_expenses_modal_url = "{% url 'ajax_appraisal_expenses_modal_url' %}"
+  ajax_save_expenses_url = "{% url 'ajax_save_expenses_url' %}"
 </script>
 
 {% load custom_tags %}
