--- a/web/list/templates/list/modal_evaluate.html
+++ b/web/list/templates/list/modal_evaluate.html
@@ -87,18 +87,14 @@
               </td>
             </tr>
             <tr>
-              <td>
-                 {{evaluationForm.commentText.label}}
-              </td>
-              <td id="commentText" colspan="2">
+              <td colspan="3" id="commentText">
+                {{evaluationForm.commentText.label_tag}}
                 {{evaluationForm.commentText}}
               </td>
             </tr>
             <tr>
-              <td>
-                 {{evaluationForm.commentFeedback.label}}
-              </td>
-              <td id="commentFeedback" colspan="2">
+              <td colspan="3" id="commentFeedback">
+                {{evaluationForm.commentFeedback.label_tag}}
                 {{evaluationForm.commentFeedback}}
               </td>
             </tr>
