--- a/web/list/templates/list/modal_expenses.html
+++ b/web/list/templates/list/modal_expenses.html
@@ -39,13 +39,13 @@
       <div class="row">
 
           <div class="form-group col-9" id="div_description">
-            <small>{{ form_expenses.description.label_tag}}</small>
+            {{ form_expenses.description.label_tag}}
             {{ form_expenses.description }}
           </div>
 
           <div class="form-group col-3" id="div_totalPrice">
-            <small>{{ form_expenses.totalPrice.label_tag }}</small>
-              {{ form_expenses.totalPrice }}
+            {{ form_expenses.totalPrice.label_tag }}
+            {{ form_expenses.totalPrice }}
           </div>
 
       </div>
