--- a/web/user/templates/user/email_solicitud.html
+++ b/web/user/templates/user/email_solicitud.html
@@ -9,7 +9,17 @@
         	<p>Solicitante: {{appraisal.get_solicitante_display}}</p>
         	<p>Tipo de tasación: {{appraisal.get_tipoTasacion_display}}</p>
       		<p>Dirección: {{appraisal.real_estates.first.address}}</p>
+            {% if appraisal.contacto %}
+            <p>Contacto: {{appraisal.contacto|default_if_none:""}}
+            {% if appraisal.contactoEmail %}
+            , {{appraisal.contactoEmail|default_if_none:""}}
+            {% endif %}
+            {% if appraisal.contactoTelefono %}
+            , {{appraisal.contactoTelefono|default_if_none:""}}
+            {% endif %}
+            </p>
+            {% endif %}
       	</div>
-        <p>Para ver más detalles y rechazar o aceptar esta solicitud, haga <a href="http://127.0.0.1:8000/list/">click aquí</a>.</p>
+        <p>Para ver más detalles y rechazar o aceptar esta solicitud, haga <a href="http://tasador.dataurbana.io/list/">click aquí</a>.</p>
     </body>
 </html>
